--- a/application/servicetemplate-orm/pom.xml
+++ b/application/servicetemplate-orm/pom.xml
@@ -54,4 +54,27 @@
 			<version>${revision}</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>target/generated-sources/annotations</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+      </plugin></plugins>
+	</build>
 </project>
