Add api and configuration modules

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -12,7 +12,9 @@
 	<packaging>pom</packaging>
 
 	<modules>
+		<module>servicetemplate-configuration</module>
+		<module>servicetemplate-restapi</module>
 		<module>servicetemplate-domain</module>
-		<module>servicetemplate-orm</module>
+		<module>servicetemplate-persistence</module>
 	</modules>
 </project>
