--- a/application/servicetemplate-restapi/pom.xml
+++ b/application/servicetemplate-restapi/pom.xml
@@ -23,6 +23,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>1.5.3.Final</version>
@@ -77,7 +82,7 @@
 			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
-				<version>6.4.0</version>
+				<version>6.6.0</version>
 				<executions>
 					<execution>
 						<id>src</id>
@@ -120,6 +125,10 @@
 							<inputSpec>
 								${project.basedir}/../../api/src/main/resources/purchaseorder-openapi.yaml</inputSpec>
 							<generatorName>markdown</generatorName>
+							<templateDirectory>${project.basedir}/../../doc/restapi</templateDirectory>
+							<output>
+								${project.basedir}/../../doc/restapi
+							</output>
 						</configuration>
 					</execution>
 				</executions>
